<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_cameraopen"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imageView_faceshow"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/textView_trainlog"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >
    </ImageView>

    <Button
        android:id="@+id/button_cameraopen"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:text="@string/open_camera" />

    <Button
        android:id="@+id/button_trainface"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/button_cameraopen"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="15dp"
        android:text="@string/train_face" />

    <TextView
        android:id="@+id/textView_trainlog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_trainface"
        android:layout_centerHorizontal="true"
        android:text="@string/hello_world" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_trainface"
        android:layout_centerHorizontal="true"
        android:inputType="text" >

        <requestFocus />
    </EditText>

</RelativeLayout>